Implemented Menu-wise filter

--- a/templates/add_prebooking.html
+++ b/templates/add_prebooking.html
@@ -100,7 +100,7 @@
                     data-name="{{ product.product_name }}"
                     data-price="{{ product.price }}"
                   >
-                    {{ product.product_name }} - ₹{{ product.price }}
+                    {{ product.product_name }}
                   </option>
                   {% endfor %}
                 </select>
